# cpp-hw-fundamentals

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  justfile  main.cpp  mdate.h  premake5.lua  readme.md  utils.h
.github/workflows/: mirror-codeberg.yml
cmake/: vscode_debug.cmake
include/: Client.hpp  Person.hpp  Utils.hpp  mj_str.hpp  str.hpp  utils.h  utils.hpp  validator.hpp  validator.tpp
lib/: utils.cpp
src/: lib.cpp  main.cpp  mj_str.cpp  str.cpp
src/libs/: Client.cpp  Person.cpp  Utils.cpp  str.cpp  utils.cpp
templates/: str.tpp  utils.tpp  validator.tpp
tests/: test_person.cpp  test_utils.cpp  test_validator.cpp
